--- a/src/main/webapp/WEB-INF/views/car.html
+++ b/src/main/webapp/WEB-INF/views/car.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hello</title>
+    <title>Car</title>
 </head>
 <body>
-<h1 style="text-align: center">HELLO</h1>
+<h1 style="text-align: center">Car page</h1>
 </body>
 </html>
