--- a/src/main/webapp/WEB-INF/views/header.html
+++ b/src/main/webapp/WEB-INF/views/header.html
@@ -11,10 +11,10 @@
                 <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
                     <li><a href="/" class="nav-link px-2 text-white btn-outline-light me-2"><h6 class="btn-outline-light">Home</h6></a></li>
                     <li><a href="/user" class="nav-link px-2 text-white btn-outline-light me-2"><h6 class="btn-outline-light">User</h6></a></li>
-                    <li><a href="/bulletBox" class="nav-link px-2 text-white btn-outline-light me-2"><h6 class="btn-outline-light">Bullet box</h6></a></li>
-                    <li><a href="/bullets" class="nav-link px-2 text-white btn-outline-light me-2"><h6 class="btn-outline-light">Bullets</h6></a></li>
-                    <li><a href="/weapons" class="nav-link px-2 text-white btn-outline-light me-2"><h6 class="btn-outline-light">Weapons</h6></a></li>
-                    <li><a href="/guns" class="nav-link px-2 text-white btn-outline-light me-2"><h6 class="btn-outline-light">Guns</h6></a></li>
+                    <li><a href="#" class="nav-link px-2 text-white btn-outline-light me-2"><h6 class="btn-outline-light">a</h6></a></li>
+                    <li><a href="#" class="nav-link px-2 text-white btn-outline-light me-2"><h6 class="btn-outline-light">d</h6></a></li>
+                    <li><a href="#" class="nav-link px-2 text-white btn-outline-light me-2"><h6 class="btn-outline-light">fg</h6></a></li>
+                    <li><a href="#" class="nav-link px-2 text-white btn-outline-light me-2"><h6 class="btn-outline-light">h</h6></a></li>
                 </ul>
 
                 <form class="col-12 col-lg-auto mb-3 mb-lg-0 me-lg-3">
