--- a/src/main/webapp/WEB-INF/views/hello.html
+++ b/src/main/webapp/WEB-INF/views/hello.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Hello</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+
 </head>
 <body>
-<h1 style="text-align: center">HELLO</h1>
-<h1><a href="/user">User</a> </h1>
+<header th:insert="header :: header"></header>
+
+<header th:insert="footer :: footer"></header>
+
 </body>
 </html>
